--- a/css/theme/source/nebulab.scss
+++ b/css/theme/source/nebulab.scss
@@ -64,7 +64,7 @@ body {
 	}
 
 	&:after {
-		content: 'Michela Frecchiami @Nebulab - A new identity for Solidus. | All Hands 2019';
+		content: 'Michela Frecchiami @Nebulab - A new identity for Solidus. | Demo Friday 05/24/2019';
 		position: absolute;
 		top: 3%;
 		left: 5%;
